# Hedge-v2

./: .gitignore  CHANGELOG.md  LICENSE  README.md
server/: Cargo.toml  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
server/src/main/java/: module-info.java
server/src/main/kotlin/com/heerkirov/hedge/server/: Application.kt
server/src/main/kotlin/com/heerkirov/hedge/server/application/: Application.kt  ApplicationOptions.kt
server/src/main/kotlin/com/heerkirov/hedge/server/configuration/: Configuration.kt
server/src/main/kotlin/com/heerkirov/hedge/server/dao/: AlbumAnnotationRelations.kt  AlbumAuthorRelations.kt  AlbumImageRelations.kt  AlbumTagRelations.kt  AlbumTopicRelations.kt  Albums.kt  Annotations.kt  AuthorAnnotationRelations.kt  Authors.kt  FileRecords.kt  FolderImageRelations.kt  Folders.kt  IllustAnnotationRelations.kt  IllustAuthorRelations.kt  IllustTagRelations.kt  IllustTopicRelations.kt  Illusts.kt  ImportImages.kt  Partitions.kt  SourceImages.kt  SourceTagMappings.kt  TagAnnotationRelations.kt  Tags.kt  TopicAnnotationRelations.kt  Topics.kt
server/src/main/kotlin/com/heerkirov/hedge/server/definitions/: Filename.kt  Source.kt
server/src/main/kotlin/com/heerkirov/hedge/server/dto/: Album.kt  Annotation.kt  Author.kt  FindSimilar.kt  Folder.kt  General.kt  Illust.kt  IllustUtil.kt  Import.kt  Meta.kt  MetaUtil.kt  (+8 more)
server/src/main/resources/: forbidden.html
server/src/main/resources/migrations/: v0.1.0.sql  v0.2.0.sql
server/src/main/resources/syntax/: syntax-table.txt  syntax.txt
(+1459 files in other folders)
