[package]
name = "hedge-v2-server"
version = "0.1.0"
authors = ["Heer Kirov <HeerKirov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
rusqlite = { version = "0.24.0", "features" = ["bundled"] }
